# audiodecoder.gsf

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
audiodecoder.gsf/: addon.xml  addon.xml.in
audiodecoder.gsf/resources/language/resource.language.af_za/: strings.po
audiodecoder.gsf/resources/language/resource.language.am_et/: strings.po
audiodecoder.gsf/resources/language/resource.language.ar_sa/: strings.po
audiodecoder.gsf/resources/language/resource.language.ast_es/: strings.po
audiodecoder.gsf/resources/language/resource.language.az_az/: strings.po
audiodecoder.gsf/resources/language/resource.language.be_by/: strings.po
audiodecoder.gsf/resources/language/resource.language.bg_bg/: strings.po
audiodecoder.gsf/resources/language/resource.language.bs_ba/: strings.po
audiodecoder.gsf/resources/language/resource.language.ca_es/: strings.po
audiodecoder.gsf/resources/language/resource.language.cs_cz/: strings.po
audiodecoder.gsf/resources/language/resource.language.cy_gb/: strings.po
audiodecoder.gsf/resources/language/resource.language.da_dk/: strings.po
audiodecoder.gsf/resources/language/resource.language.de_de/: strings.po
audiodecoder.gsf/resources/language/resource.language.el_gr/: strings.po
debian/: changelog.in  control  copyright  rules
lib/: kodi-viogsf-note.txt
lib/psflib/: kodi-note.txt
lib/viogsf/: CMakeLists.txt
src/: GSFCodec.cpp  GSFCodec.h
(+66 files in other folders)
